compiler/plc_parser/src/parser/tests/parse_errors/snapshots/plc_parser__parser__tests__parse_errors__parse_error_statements_tests__invalid_variable_name_error_recovery.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected KeywordEndVar but found '4 : INT;'
  ┌─ <internal>:5:17
  │
5 │                 4 : INT;
  │                 ^^^^^^^^ Unexpected token: expected KeywordEndVar but found '4 : INT;'
